# coding-challenge-python

./: Readme.md  pyproject.toml  requirements.txt
PropertyManager.egg-info/: PKG-INFO  SOURCES.txt
PropertyManagerPackage.egg-info/: PKG-INFO  SOURCES.txt
challenge/: PropertyManager.py  __main__.py
challenge.egg-info/: PKG-INFO  SOURCES.txt
tests/: property_manager_unittest.py
